<resources>
    <string name="app_name">HEALTHY LIFE</string>
    <string name="update">Update</string>
    <string name="delete">Remove</string>
    <string name="add">add</string>
    <string name="main">MAIN ACTIVITY</string>
    <string name="hint_task">Enter Expense</string>
    <string name="hint_date">Enter Date</string>
    <string name="hint_time">Enter Time</string>

    <!-- bmi  string!-->

    <string name="bmi_txt">BMI</string>
    <string name="diet_txt">DIET</string>
    <string name="reminder_txt">REMINDER</string>
    <string name="expense_txt">EXPENSE</string>
    <string name="expense_txt1">EXPENSEs</string>
    <string name="action_settings">Settings</string>
    <string name="select_action">Select</string>
    <string name="next_action">Next</string>
    <string name="title_activity_meal">meal</string>

    <string name="calories">calories</string>

    <string name="create_btn">ADD</string>
    <string name="history_btn">HISTORY</string>

    <string name="bmi">Calculate</string>
    <string name="history">History</string>
    <string name="heading">Calculate your BMI</string>
    <string name="heading2">Calculate BMI</string>
    <string name="name">Name</string>
    <string name="Gender">Gender</string>
    <string name="hight">Height(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="calculate">Calculate</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saved">Saved BMI</string>
    <string name="back">Back</string>
    <string name="under">Under Weight</string>
    <string name="normal">Normal Weight</string>
    <string name="over">Over Weight</string>
    <string name="obesity">Obesity</string>
</resources>
