<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/bg2">

    <!--<Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main"
        android:id="@+id/mainButton"
        android:background="@color/colorPrimary"
        android:onClick="viewMyMain"/>
        android:onClick="OnCreate"-->

        <Button
            android:id="@+id/bmi"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/blue"
            android:onClick="bmi"
            android:text="@string/bmi_txt"
            android:textSize="24dp"
            android:textStyle="bold" />

    <Button
        android:id="@+id/diet"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/blue"
        android:onClick="diet"
        android:text="@string/diet_txt"
        android:textSize="24dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reminder"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/blue"
        android:onClick="reminder"
        android:text="@string/reminder_txt"
        android:textSize="24dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mainButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/blue"
        android:onClick="expense"
        android:text="@string/expense_txt"
        android:textSize="24dp"
        android:textStyle="bold" />




</LinearLayout>